--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+  
+<head>
+<title>My First HTML</title>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/YourIcon.ico" type="image/x-icon" />
+</head>
+  
 <body>
-
 <h1>Journal Club</h1>
-
 <p>Sans and Adi</p>
-
 </body>
+  
 </html>
