--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
 <head>
-<title>My First HTML</title>
+<title>Physkiss</title>
   <meta charset="UTF-8">
   <link rel="icon" href="favicon/favicon.ico" type="image/x-icon" />
 </head>
