--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>Physkiss</title>
   <meta charset="UTF-8">
-  <link rel="icon" href="favicon/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
   
 <body>
