--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-  
-<head>
-<title>Physkiss</title>
+<body style="background-color:maroon;">
+<body>
+<h1 style="font-size:50px; color="white"> Physkiss</h1>
+<h2 style="font-size:30px; color="#FFD700"> Physkiss</h1>
   <meta charset="UTF-8">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
