--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
+  
 <body style="background-color:maroon;">
 <body>
-<h1 style="font-size:50px; color="white"> Physkiss</h1>
-<h2 style="font-size:30px; color="#FFD700"> Physkiss</h1>
-  <meta charset="UTF-8">
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-</head>
-  
-<body>
-<h1>Journal Club</h1>
-<p>Sans and Adi</p>
+<h1 style="font-size:50px; color:white;">Journal Club</h1>
+<h2 style="font-size:30px; color:#FFD700;">Sanskriti and Aditya</h2>
+  <meta charset="UTF-8">  
 </body>
   
 </html>
+
+  
