--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ tr:nth-child(odd) {
 </style>
 </head>
     
-<body style="background-color:maroon;">
+<body style="background-color:white;">
 <body>
   
 <h1 style="font-size:50px; color:white;">Journal Club</h1>
+  
 <h2 style="font-size:30px; color:#FFD700;">with Sanskriti Chitransh and Aditya Vijaykumar</h2>
-  <meta charset="UTF-8">  
-
+  
 <h3>Schedule and Program</h2>
 
 <table>
@@ -49,7 +49,7 @@ tr:nth-child(odd) {
     <td>3rd June, 2020</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
+    <td>2</td>
     <td>Building the world's largest telescope</td>
     <td>TBA</td>
   </tr>
