--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ tr:nth-child(odd) {
   
 <h1 style="font-size:50px; color:white;">Journal Club</h1>
   
-<h2 style="font-size:30px; color:#FFD700;">with Sanskriti Chitransh and Aditya Vijaykumar</h2>
+  <h2 style="font-size:30px; color:#FFD700;"><i>with Sanskriti Chitransh and Aditya Vijaykumar</i></h2>
   
 <h3>Schedule and Program</h2>
 
@@ -45,7 +45,7 @@ tr:nth-child(odd) {
   </tr>
   <tr>
     <td>1</td>
-    <td>Quantum computing with electrons on helium</td>
+    <td><a href="https://github.com/sanskritea/physkiss/tree/master/1">Quantum computing with electrons on helium</a></td>
     <td>3rd June, 2020</td>
   </tr>
   <tr>
