--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ tr:nth-child(odd) {
 <body style="background-color:white;">
 <body>
   
-<h1 style="font-size:50px; color:white;">Journal Club</h1>
+<h1 style="font-size:50px; color:black;">Journal Club</h1>
   
-  <h2 style="font-size:30px; color:#FFD700;"><i>with Sanskriti Chitransh and Aditya Vijaykumar</i></h2>
+  <h2 style="font-size:30px; color:black;"><i>with Sanskriti Chitransh and Aditya Vijaykumar</i></h2>
   
 <h3>Schedule and Program</h2>
 
