--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
+  
 <head>
   <title>Physkiss</title>
   
@@ -11,7 +13,7 @@ table {
   width: 100%;
 }
 
-td, th {
+th, td {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
