--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 <head>
   <title>Physkiss</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style>
 table {
   font-family: serif;
