--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ tr:nth-child(odd) {
   
 <h1 style="font-size:50px; color:black;">Journal Club</h1>
   
-  <h2 style="font-size:30px; color:black;"><i>with Sanskriti Chitransh and Aditya Vijaykumar</i></h2>
+  <h2 style="font-size:30px; color:white;"><i>with Sanskriti Chitransh and Aditya Vijaykumar</i></h2>
   
 <h3>Schedule and Program</h2>
 
