--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-  
-  
 <head>
+  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
   <title>Physkiss</title>
   <style>
 table {
@@ -51,12 +51,17 @@ tr:nth-child(odd) {
   </tr>
   <tr>
     <td>2</td>
-    <td>Building the world's largest telescope</td>
+    <td>Building the world's largest telescopes</td>
     <td>TBA</td>
   </tr>
   <tr>
     <td>3</td>
     <td>Dark Matter Detection Experiments with Liquid Xenon</td>
+    <td>TBA</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>More than just beautiful patterns - when fluids go haywire</td>
     <td>TBA</td>
   </tr>
 </table>  
