--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@ tr:nth-child(odd) {
 <h1 style="font-size:50px; color:black;">Journal Club</h1>
   
   <h2 style="font-size:30px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
-  
-<h3>Schedule and Program</h2>
 
+<article>
+  <header>
+    <h1>Schedule and Program</h1>
+    <p>Posted by John Doe</p>
+    <p>Some additional information here</p>
+  </header>
+ <h3>Schedule and Program</h2>
 <table>
   <tr>
     <th>S. No</th>
@@ -65,6 +70,11 @@ tr:nth-child(odd) {
     <td>TBA</td>
   </tr>
 </table>  
+  
+  
+</article>  
+  
+
     
 </body>
   
