--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ tr:nth-child(odd) {
 
 <article>
   <header>
-    <h1>Schedule and Program</h1>
+    <h1 style="color:blue;">Schedule and Program</h1>
     <p>Posted by John Doe</p>
     <p>Some additional information here</p>
   </header>
- <h3>Schedule and Program</h2>
+ <h3 style="color:blue;">Schedule and Program</h3>
 <table>
   <tr>
     <th>S. No</th>
