--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ tr:nth-child(odd) {
     <h1 style="color:blue;">Schedule and Program</h1>
   </header>
   
-<h3 style="color:blue;">Schedule and Program</h3>
+<!h3 style="color:blue;">Schedule and Program</h3 >
 <table>
   <tr>
     <th>S. No</th>
