--- a/index.html
+++ b/index.html
@@ -20,25 +20,31 @@ th, td {
 
 tr:nth-child(even) {
   background-color: #cfe2f3;
+  color: #434343
 }
 
 tr:nth-child(odd) {
   background-color: #ead1dc;
+  color: #434343;
 }
-    
+
+th {
+  background-color: ivory;
+  color: black;
+}
 </style>
 </head>
     
-<body style="background-color:white;">
+<body style="background-color:ivory;">
 <body>
   
 <h1 style="font-size:50px; color:black;">Journal Club</h1>
   
-  <h2 style="font-size:30px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
+  <h2 style="font-size:30px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
 
 <article>
   <header>
-    <h1 style="color:blue;">Schedule and Program</h1>
+    <h1 style="color:black;">Schedule and Program</h1>
   </header>
   
 <!\ >
