--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
   <title>Physkiss</title>
+  
+  <div style="background-image: url('foto.jpg');">
+    
   <style>
 table {
   font-family: serif;
@@ -40,7 +43,7 @@ th {
   
 <h1 style="font-size:50px; color:black;">Journal Club</h1>
   
-  <h2 style="font-size:30px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
+  <h2 style="font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
 
 <article>
   <header>
