--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
   <title>Physkiss</title>
   
-  <div style="background-image: url('foto.jpg');">
+  <style>
+body {
+  background-image: url('foto.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
     
   <style>
 table {
