--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@ th {
 <body style="background-color:ivory;">
 <body>
   
-<h1 style="font-size:50px; color:black;">Journal Club</h1>
+<h1 style="font-size:50px; color:white;">Journal Club</h1>
   
-  <h2 style="font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
+  <h2 style="font-size:25px; color:white;"><i>with Sanskriti Chitransh</i></h2>
 
 <article>
   <header>
-    <h1 style="color:black;">Schedule and Program</h1>
+    <h1 style="color:white;">Schedule and Program</h1>
   </header>
   
 <!\ >
