--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <style>
 body {
-  background-image: url('foto.jpg');
+  background-image: url('asdf.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
