--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@ th, td {
 }
 
 tr:nth-child(even) {
-  <! background-color: #cfe2f3; >
+  <!---background-color: #cfe2f3; --->
   color: #434343
 }
 
 tr:nth-child(odd) {
-  <! background-color: #ead1dc; >
+  <!--- background-color: #ead1dc; --->
   color: #434343;
 }
 
 th {
-  background-color: ivory;
+  <!---background-color: ivory;--->
   color: black;
 }
 </style>
