--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ div.transbox {
 }
 
 div.transbox p {
-  margin: 10%;
+  margin: 70%;
   font-weight: bold;
   color: #000000;
 }    
@@ -44,12 +44,12 @@ th, td {
 
 tr:nth-child(even) {
   <!---background-color: #cfe2f3; --->
-  color: #434343
+  color: white
 }
 
 tr:nth-child(odd) {
   <!--- background-color: #ead1dc; --->
-  color: #434343;
+  color: white
 }
 
 th {
@@ -64,7 +64,7 @@ th {
   
 <h1 style="font-size:50px; color:white;">Journal Club</h1>
   
-  <h2 style="font-size:25px; color:white;"><i>with Sanskriti Chitransh</i></h2>
+  <h2 style="font-size:25px; color:white;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
 
 <article>
   <header>
