--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ tr:nth-child(odd) {
 }
 
 th {
-  <!---background-color: ivory;--->
+  <!--background-color: ivory;-->
   color: black;
 }
 </style>
@@ -61,10 +61,10 @@ th {
     
 <body style="background-color:ivory;">
 <body>
+<!--#434343-->  
+<h1 style="font-size:50px; color:#434343;">Journal Club</h1>
   
-<h1 style="font-size:50px; color:white;">Journal Club</h1>
-  
-  <h2 style="font-size:25px; color:white;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
+  <h2 style="font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
 
 <article>
   <header>
