--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div.transbox {
   opacity: 0.5;
 }
 
-div.transbox p {
+div.transbox table {
   margin: 70%;
   font-weight: bold;
   color: #000000;
@@ -68,7 +68,7 @@ th {
 
 <article>
   <header>
-    <h1 style="color:white;">Schedule and Program</h1>
+    <h1 style="color:#434343;">Schedule and Program</h1>
   </header>
   
 <div class="transbox">
