added initial information for talk 2

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ th {
   </tr>
   <tr>
     <td>2</td>
-    <td>Building the world's largest telescopes</td>
-    <td>TBA</td>
+    <td><a href="https://github.com/sanskritea/physkiss/tree/master/1">Building the world's largest telescopes</a></td>
+    <td>13th0 June, 2020</td>
   </tr>
   <tr>
     <td>3</td>
