--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
-
+  </style>
+  
+  <style>
 div.transbox {
   margin: 40px;
-  background-color: black;
+  background-color: white;
   border: 0px solid black;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
-div.transbox table {
+div.transbox p {
   margin: 70%;
   font-weight: bold;
   color: #000000;
@@ -42,20 +44,7 @@ th, td {
   padding: 8px;
 }
 
-tr:nth-child(even) {
-  <!---background-color: #cfe2f3; --->
-  color: white
-}
 
-tr:nth-child(odd) {
-  <!--- background-color: #ead1dc; --->
-  color: white
-}
-
-th {
-  <!--background-color: ivory;-->
-  color: black;
-}
 </style>
 </head>
     
