--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
   <style>
 body {
   background-image: url('blackboard.jpeg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  <!--background-repeat: no-repeat;-->
+  <!--background-attachment: fixed;-->
+  <!--background-size: cover;-->
 }
   </style>
   
   <style>
 div.transbox {
-  margin: 40px;
+  margin: 100px;
   background-color: white;
   border: 0px solid black;
   opacity: 0.6;
+  width: 70%
 }
 
 div.transbox p {
