--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@ th, td {
 <body style="background-color:ivory;">
 <body>
 <!--#434343-->  
-<h1 style="font-size:50px; color:#434343;">Journal Club</h1>
+<&nbsp<h1 style="font-size:50px; color:#434343;">Journal Club</h1>
   
-  <h2 style="font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
+  <h2 style="text-align: center; font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
 
 <article>
   <header>
-    <h1 style="color:#434343;">Schedule and Program</h1>
+    <h1 style="text-align: center; color:#434343;">Schedule and Program</h1>
   </header>
   
 <div class="transbox">
