--- a/index.html
+++ b/index.html
@@ -44,22 +44,16 @@ th, td {
   text-align: left;
   padding: 8px;
 }
-
-
+    
 </style>
 </head>
     
-<body style="background-color:ivory;">
+<!--body style="background-color:ivory;"-->
 <body>
 <!--#434343-->  
 <h1 style="text-align: center; font-size:50px; color:#434343;">Journal Club</h1>
-  
-  <h2 style="text-align: center; font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2>
-
-
- 
- <h3 style="text-align: center; font-size:15px; color:#434343;"><i>Schedule and Program</i></h2>
-
+<h2 style="text-align: center; font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
+<h3 style="text-align: center; font-size:15px; color:#434343;">Schedule and Program</h2>
   
 <div class="transbox">
 <table>
