--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@ th, td {
 <!--#434343-->  
 <h1 style="text-align: center; font-size:50px; color:#434343;">Journal Club</h1>
 <h2 style="text-align: center; font-size:25px; color:ivory;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
-<h5 style="font-size:20px; color:ivory;"><i>Schedule and Program<i></h2>
+
 <div class="transbox">
 <table>
+  <caption style="text-align: center; font-size:15px; color:ivory;">Schedule and Program</caption>
   <tr>
     <th>S. No</th>
     <th>Title</th>
