--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div.transbox {
   background-color: white;
   border: 0px solid black;
   opacity: 0.6;
-  width: 50%
+  width: 40%
 }
 
 div.transbox p {
@@ -53,10 +53,9 @@ th, td {
 <!--#434343-->  
 <h1 style="text-align: center; font-size:50px; color:#434343;">Journal Club</h1>
 <h2 style="text-align: center; font-size:25px; color:ivory;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
-
+<p style="font-size:20px; color:ivory;">Schedule and Program</p>
 <div class="transbox">
 <table>
-  <caption style="text-align: center; font-size:15px; color:ivory;">Schedule and Program</caption>
   <tr>
     <th>S. No</th>
     <th>Title</th>
