--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <style>
 body {
   background-image: url('blackboard.jpeg');
-  <!--background-repeat: no-repeat;-->
-  <!--background-attachment: fixed;-->
-  <!--background-size: cover;-->
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
   </style>
   
