--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ div.transbox p {
   
   <style>
 table {
+  margin-top:0%;
   font-family: serif;
   border-collapse: collapse;
-  width: 60%;
+  width: 80%;
 }
 
 th, td {
@@ -52,8 +53,8 @@ th, td {
 <body>
 <!--#434343-->  
 <h1 style="text-align: center; font-size:50px; color:#434343;">Journal Club</h1>
-<h2 style="text-align: center; font-size:25px; color:ivory;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
-<p style="font-size:20px; color:ivory;">Schedule and Program</p>
+<h2 style="text-align: center; font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
+<p style="font-size:20px; color:#434343;">Schedule and Program</p>
 <div class="transbox">
 <table>
   <tr>
