--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div.transbox {
   background-color: white;
   border: 0px solid black;
   opacity: 0.6;
-  width: 70%
+  width: 50%
 }
 
 div.transbox p {
@@ -70,7 +70,7 @@ th, td {
   <tr>
     <td>2</td>
     <td><a href="https://github.com/sanskritea/physkiss/tree/master/1">Building the world's largest telescopes</a></td>
-    <td>13th0 June, 2020</td>
+    <td>13th June, 2020</td>
   </tr>
   <tr>
     <td>3</td>
