--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div.transbox {
   background-color: white;
   border: 0px solid black;
   opacity: 0.6;
-  width: 60%
+  width: 500px
 }
 
 div.transbox p {
@@ -37,7 +37,7 @@ table {
   margin-top:0%;
   font-family: serif;
   border-collapse: collapse;
-  width: 80%;
+  width: 500px
 }
 
 th, td {
