--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div.transbox {
   background-color: white;
   border: 0px solid black;
   opacity: 0.6;
-  width: 500px
+  width: 800px
 }
 
 div.transbox p {
@@ -37,7 +37,7 @@ table {
   margin-top:0%;
   font-family: serif;
   border-collapse: collapse;
-  width: 500px
+  width: 800px
 }
 
 th, td {
@@ -52,9 +52,9 @@ th, td {
 <!--body style="background-color:ivory;"-->
 <body>
 <!--#434343-->  
-<h1 style="text-align: center; font-size:50px; color:#434343;">Journal Club</h1>
+<h1 style="text-align: center; font-size:50px; color:black;">Journal Club</h1>
 <h2 style="text-align: center; font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
-<p style="font-size:20px; color:#434343;">Schedule and Program</p>
+<p style="margin-top:0%; margin-bottom=0%; font-size:20px; color:black;">Schedule and Program</p>
 <div class="transbox">
 <table>
   <tr>
