--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ body {
   
   <style>
 div.transbox {
-  margin: 100px;
+  margin-top: 10px;
+  margin-left: 100px;
   background-color: white;
   border: 0px solid black;
   opacity: 0.6;
@@ -53,7 +54,7 @@ th, td {
 <body>
 <!--#434343-->  
 <h1 style="text-align: center; font-size:50px; color:black;">Journal Club</h1>
-<h2 style="text-align: center; font-size:25px; color:#434343;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
+<h2 style="text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
 <p style="margin-top:0%; margin-bottom=0%; font-size:20px; color:black;">Schedule and Program</p>
 <div class="transbox">
 <table>
