--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ th, td {
 <!--#434343-->  
 <h1 style="text-align: center; font-size:50px; color:black;">Journal Club</h1>
 <h2 style="margin-top:0%; text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
-<p style="margin-top:0%; margin-bottmargin-top:0%om=0%, margin-left=40px; font-size:20px; color:black;"><b>Schedule and Program</b></p>
+<p style="margin-top:0%; margin-bottmargin-top:0%om=0%, margin-left=40px; font-size:20px; color:black;"><b>Schedule:</b></p>
 <div class="transbox">
 <table>
   <tr>
