--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ th, td {
 <body>
 <!--#434343-->  
 <h1 style="text-align: center; font-size:50px; color:black;">Journal Club</h1>
-<h2 style="margin-top:-30px; text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
-<p style="margin-top:0%; margin-bottom=0%, margin-left=80px; font-size:20px; color:black;"><b>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Schedule:</b></p>
+<h2 style="margin-top:-20px; text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
+<p style="margin-top:40px; margin-bottom=0%, margin-left=80px; font-size:20px; color:black;"><b>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Schedule:</b></p>
 <div class="transbox">
 <table>
   <tr>
