--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ div.transbox {
   background-color: white;
   border: 0px solid black;
   opacity: 0.6;
-  
+  width: 800px
 }
 
 div.transbox p {
@@ -32,6 +32,22 @@ div.transbox p {
 }    
 </style>
     
+ 
+<style>
+div.transbox1 {
+  margin-top: 10px;
+  background-color: white;
+  border: 0px solid black;
+  opacity: 0.6;
+  width: 80px
+}
+
+div.transbox1 p {
+  margin: 70%;
+  font-weight: bold;
+  color: #000000;
+}    
+</style>
   
   <style>
 table {
@@ -54,9 +70,14 @@ th, td {
 <!--body style="background-color:ivory;"-->
 <body>
 <!--#434343-->  
+<div class="transbox1>
 <h1 style="text-align: center; font-size:50px; color:black;">Journal Club</h1>
-<h2 style="margin-top:-20px; text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
-<p style="margin-top:40px; margin-bottom=0%, margin-left=80px; font-size:20px; color:black;"><b>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Schedule:</b></p>
+<h2 style="margin-top:-20px; text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i>
+                                                                              </h2> 
+<p style="margin-top:40px; margin-bottom=0%, margin-left=80px; font-size:20px; color:black;"><b>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Schedule:</b>
+   </p>
+   </div>
+                                                                                            
 <div class="transbox">
 <table>
   <tr>
