--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ th, td {
 <body>
 <!--#434343-->  
 <div class="transbox1>
-<h1 style="text-align: center; font-size:50px; color:black;">Journal Club</h1>
+<h1 style="text-align: center; font-size:50px; color:blue;">Journal Club</h1>
 </div>
 <h2 style="margin-top:-20px; text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i>
                                                                               </h2> 
