--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ div.transbox p {
  
 <style>
 div.transbox1 {
-  margin-top: 10px;
+  margin: 100px;
   background-color: white;
   border: 0px solid black;
   opacity: 0.6;
-  width: 80px
+  width: 200px
 }
 
 div.transbox1 p {
@@ -70,9 +70,11 @@ th, td {
 <!--body style="background-color:ivory;"-->
 <body>
 <!--#434343-->  
+  
 <div class="transbox1>
 <h1 style="text-align: center; font-size:50px; color:blue;">Journal Club</h1>
 </div>
+                                                           
 <h2 style="margin-top:-20px; text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i>
                                                                               </h2> 
 <p style="margin-top:40px; margin-bottom=0%, margin-left=80px; font-size:20px; color:black;"><b>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Schedule:</b>
