--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ th, td {
 }
 
 .header {
-  padding: 60px;
+  padding: 0px;
   text-align: center;
-  background-color: black;
+  background-color: white;
   opacity: 0.5;
-  color: white;
+  color: black;
   font-size: 30px;
 }
 
