--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ th, td {
   text-align: center;
   background-color: white;
   opacity: 0.5;
-  color: black;
+  color: blue;
   font-size: 30px;
 }
 
