--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@ th, td {
     <td>More than just beautiful patterns - when fluids go haywire</td>
     <td>TBA</td>
   </tr>
+   <tr>
+    <td>5</td>
+    <td>Nanofabrication: from Silicon to cNOT</td>
+    <td>TBA</td>
+  </tr>  
 </table>  
 </div>
       
