--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@ body {
   background-size: cover;
 }
   
+div.header {
+  padding: 0px;
+  text-align: center;
+  background-color: white;
+  opacity: 0.5;
+  color: blue;
+  font-size: 30px;
+}
+  
 div.transbox {
   margin-top: 10px;
   margin-left: 100px;
@@ -33,7 +42,7 @@ table {
   font-family: serif;
   border-collapse: collapse;
   color: black;
-  width: 800px
+  width: 800px;
 }
 
 th, td {
@@ -42,14 +51,7 @@ th, td {
   padding: 8px;
 }
 
-.header {
-  padding: 0px;
-  text-align: center;
-  background-color: white;
-  opacity: 0.5;
-  color: blue;
-  font-size: 30px;
-}
+
 
     
 </style>
