--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@ th, td {
 <body>
 <!--#434343-->  
 
-<div class="header">
+<!--div class="header">
   <h1>Journal Club</h1>
+</div-->
+  <div class="header">
+  <h1>Hello</h1>
 </div>
                                                            
 <h2 style="margin-top:-20px; text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
