--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ div.header {
   text-align: center;
   background-color: white;
   opacity: 0.5;
-  color: blue;
+  color: black;
   font-size: 30px;
 }
   
@@ -48,7 +48,7 @@ table {
 th, td {
   border: 1px solid #dddddd;
   text-align: left;
-  padding: 8px;
+  padding: 10px;
 }
 
 
@@ -66,7 +66,7 @@ th, td {
   <h1>Journal Club</h1>
 </div-->
   <div class="header">
-  <h1>Hello</h1>
+  <h1>Journal Club</h1>
 </div>
                                                            
 <h2 style="margin-top:-20px; text-align: center; font-size:25px; color:black;"><i>with Aditya Vijaykumar and Sanskriti Chitransh</i></h2> 
