--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ th, td {
   <tr>
     <td>3</td>
     <td>Dark Matter Detection Experiments with Liquid Xenon</td>
-    <td>TBA</td>
+    <td>20th June, 2020</td>
   </tr>
   <tr>
     <td>4</td>
