added files for talk 2

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ th, td {
   </tr>
   <tr>
     <td>2</td>
-    <td><a href="https://github.com/sanskritea/physkiss/tree/master/2">Building the world's largest telescopes</a></td>
-    <td>13th June, 2020</td>
+    <td><a href="https://github.com/sanskritea/physkiss/tree/master/2"> The World's Largest Telescopes</a></td>
+    <td>22nd June, 2020</td>
   </tr>
   <tr>
     <td>3</td>
