--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ th, td {
   </tr>
   <tr>
     <td>3</td>
-    <td>Dark Matter Detection Experiments with Liquid Xenon</td>
-    <td>20th June, 2020</td>
+    <td><a href="https://github.com/sanskritea/physkiss/tree/master/3">Dark Matter Detection Experiments with Liquid Xenon</td>
+    <td>22nd June, 2020</td>
   </tr>
   <tr>
     <td>4</td>
