--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ th, td {
   </tr>
    <tr>
     <td>5</td>
-    <td>Nanofabrication: from Silicon to cNOT</td>
+    <td>Circuit Quantum Electrodynamics: a review</td>
     <td>TBA</td>
   </tr>  
 </table>  
